--- a/src/app/components/bank-account/bank-account.component.html
+++ b/src/app/components/bank-account/bank-account.component.html
@@ -1,6 +1,6 @@
 <div class="center form-wrapper">
     <h1>אשף יצירת בניין חדש</h1>
-    <mat-icon class="icon-back" routerLink="/headCommittee/creatingBuilding">arrow_back_ios</mat-icon>
+    <mat-icon class="icon-back" routerLink="/headCommittee/deshbord">arrow_back_ios</mat-icon>
     <a routerLink="/headCommittee/creatingBuilding">הגדרת בניין</a> &nbsp;
     <!-- <a routerLink="/headCommittee/dayarDetails"> > פרטי דיירים > </a> -->
     <a routerLink="/headCommittee/bankAccount">חשבון בנק</a>
@@ -33,11 +33,11 @@
             <input class="input" id="numCount" #NumCount=ngModel name="NumCount" type="number" required
                 [(ngModel)]="bankTransfers.NumAccount" />
         </div>
-        <div class="row-wrapper">
+        <!-- <div class="row-wrapper">
             <label for="yetera"> יתרת פתיחה: </label><br />
             <input class="input" id="yetera" #Yetera=ngModel name="Yetera" type="number" required
                 [(ngModel)]="bankTransfers.YeteraOnOpen" />
-        </div>
+        </div> -->
 
         <!-- <p>העלה תעודה מזהה🔗 </p>
         <p> העלה מסמך🔗</p> -->
