--- a/src/app/components/newCommittee/newCommittee.component.html
+++ b/src/app/components/newCommittee/newCommittee.component.html
@@ -56,7 +56,7 @@
     <!-- <label for="numaOfFloor"> מספר הדירה שלי</label>
     <div class="red error" [hidden]="numaOfFloor.valid || numaOfFloor.pristine">שדה חובה*</div>
     <br/><br/> -->
-    <button class="buttons" (click)="begain()">!התחל</button>
+    <button class="buttons" (click)="begain()">התחל!</button>
     <!--routerLink="/headCommittee" -->
 
 
