--- a/src/app/components/password-change/password-change.component.html
+++ b/src/app/components/password-change/password-change.component.html
@@ -1,11 +1,13 @@
-
+<div class="bg"></div>
+<form class="backgroundcolor form-wrapper">
 <div class="center"><h2>ברוכים הבאים לעידן החדש<br>בניהול הבניין שלך</h2>
-<form>
-    <h1>בחירת סיסמה<br><h3>אנא בחר סיסמה חדשה על מנת להתחבר למערכת</h3></h1>
-    <input class="input" type="password" placeholder='סיסמה חדשה' name="pass1" required [(ngModel)]="pass1"><br><br>
+<form class="example-radio-group">
+    <h1>בחירת סיסמה<br><h3>אנא בחר סיסמה חדשה על מנת להתחבר למערכת</h3></h1><br>
+    <input class="input" type="password" placeholder='סיסמה חדשה' name="pass1" required [(ngModel)]="pass1"><br>
     <input class="input" type="password" placeholder='ווידוא סיסמה' name="pass2" required [(ngModel)]="pass2"><br><br>
     <!-- <input class="input" type="text"><br><br>
     <input class="input" type="number" placeholder='פאלפון'><br><br> -->
     <button (click)="editPassword()">שמור סיסמה</button>
    
 </form></div>
+</form>
