--- a/src/app/components/committee-payments/committee-payments.component.css
+++ b/src/app/components/committee-payments/committee-payments.component.css
@@ -8,7 +8,9 @@
   .example-radio-button {
     margin: 2px;
   }
-  .dir-wrap{max-height: 200px;
+  .dir-wrap{max-height: 150px;
+    text-align: right;
+    padding-right: 120px;
     overflow-y: auto;
     position: relative;
     display: block;
