--- a/src/app/components/enter-the-survey/enter-the-survey.component.css
+++ b/src/app/components/enter-the-survey/enter-the-survey.component.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    align-items: center;
+    align-items: flex-start;
+    text-align: right;
+    padding-right: 120px;
   }
   
   .example-radio-button {
