--- a/src/app/components/enter-the-survey/enter-the-survey.component.html
+++ b/src/app/components/enter-the-survey/enter-the-survey.component.html
@@ -1,3 +1,4 @@
+<div class="bg"></div>
 <div class="form-wrapper">
     <h1>{{survey.SubSurvey}}</h1>
     <mat-icon class="icon-back" (click)="back()">arrow_back_ios</mat-icon>
